[package]
name = "git-history"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.7.1"
tempfile = "3.12.0"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
